fix: img not properly visible on small screen.
This commit change img width from 50% to 100%.

--- a/recipes/style.css
+++ b/recipes/style.css
@@ -11,7 +11,7 @@ h1 {
 }
 
 img {
-    width: 50%;
+    width: 100%;
 }
 
 h3 {
